# silvana

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  buf.gen.agent.yaml  buf.gen.yaml  buf.yaml  coordinator.example.toml  coordinator.toml  install.sh  list.py
crates/avs-operator/: Cargo.toml  README.md
crates/avs-operator/abis/: IDelegationManager.json  SilvanaServiceManager.json
crates/avs-operator/deployments/core/: 17000.json
crates/avs-operator/deployments/silvana/: 17000.json
crates/avs-operator/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  monitor.rs  register.rs  status.rs  task.rs
crates/buffer/: Cargo.toml
crates/buffer/src/: lib.rs
crates/coordination-ethereum/: Cargo.toml
crates/coordination-ethereum/src/: config.rs  contract.rs  coordination.rs  coordination.rs.bak  error.rs  lib.rs
crates/coordination-ethereum/src/abi/: app_instance_manager.rs  job_manager.rs  mod.rs  proof_manager.rs  settlement_manager.rs  silvana_coordination.rs  storage_manager.rs
crates/coordination-ethereum/src/conversions/: app.rs  block.rs  helpers.rs  job.rs  mod.rs  proof.rs  sequence.rs  settlement.rs  solidity.rs
crates/coordination-ethereum/tests/: integration_test.rs
crates/coordination-private/: Cargo.toml
crates/coordination-private/src/: auth.rs  config.rs  coordination.rs  database.rs  error.rs  jwt.rs  lib.rs
crates/coordination-sui/: Cargo.toml
crates/coordination-sui/src/: config.rs  coordination.rs  error.rs  lib.rs
crates/coordination-trait/: Cargo.toml
crates/coordination-trait/src/: error.rs  layer.rs  lib.rs
crates/coordination-trait/src/types/: agent.rs  app.rs  block.rs  event.rs  job.rs  mod.rs  multicall.rs  proof.rs  sequence.rs  settlement.rs
crates/coordinator/: .env.example  Cargo.toml  README.md  build.rs
crates/coordinator/src/: agent.rs  block.rs  cli.rs  config.rs  constants.rs  coordination.rs  coordination_layer.rs  coordination_manager.rs  coordination_wrapper.rs  coordinator.rs  docker.rs  error.rs  events.rs  example.rs  failed_jobs_cache.rs  fetch.rs  grpc.rs  hardware.rs  job_id.rs  job_lock.rs  job_searcher.rs  jobs.rs  jobs_cache.rs  layer_config.rs  lib.rs  main.rs  merge.rs  metrics.rs  multi_layer_processor.rs  multicall.rs  pending.rs  processor.rs  proof.rs  proofs_storage.rs  registry.rs  rpc.rs  session.rs  session_id.rs  settlement.rs  state.rs  (+2 more)
crates/coordinator/src/cli/: avs.rs  balance.rs  block.rs  commands.rs  config_cmd.rs  faucet.rs  instance.rs  jobs.rs  keypair.rs  log.rs  mod.rs  network.rs  new.rs  object.rs  proofs.rs  registry.rs  secrets.rs  sequence.rs  split.rs  start.rs  transaction.rs
crates/coordinator/src/fetch/: app_instance.rs  blocks.rs  jobs.rs  jobs_types.rs  mod.rs  proofs.rs  sequence_states.rs
crates/coordinator/tests/: proofs_storage_test.rs  secret_test.rs
crates/db/: Cargo.toml
crates/db/src/: kv.rs  lib.rs  secrets_storage.rs
crates/docker/: Cargo.toml
crates/docker/src/: container.rs  error.rs  lib.rs  state.rs  tee.rs
crates/ethereum/: Cargo.toml
crates/ethereum/src/: avs_contracts.rs  avs_operator.rs  balance.rs  keypair.rs  lib.rs  networks.rs
crates/health/: Cargo.toml  README.md  health.toml.example
crates/health/examples/: create_jwt.rs  generate_keypair.rs
crates/health/src/: client.rs  config.rs  error.rs  health_config.rs  jwt.rs  lib.rs  main.rs  metrics.rs
crates/indexed-merkle-map/: Cargo.toml
crates/indexed-merkle-map/src/: map.rs
crates/indexed-merkle-map/tests/: indexed_map_serialization.rs
crates/kms/: Cargo.toml
crates/kms/src/: lib.rs
crates/mina/: Cargo.toml
crates/mina/src/: balance.rs  faucet.rs  keypair.rs  lib.rs  networks.rs  signature.rs
crates/mina/tests/: keypair_tests.rs  signature_tests.rs
crates/monitoring/: Cargo.toml
crates/monitoring/src/: coordinator_metrics.rs  lib.rs  logging.rs  metrics.rs  newrelic.rs  opentelemetry.rs
crates/nats/: Cargo.toml
crates/nats/src/: lib.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/examples/: name.rs
crates/proto/src/: buffer.rs  lib.rs
crates/rpc/: Cargo.toml  README.md
crates/rpc-client/: Cargo.toml
crates/rpc-client/src/: lib.rs  shared.rs
crates/rpc/src/: adapters.rs  database.rs  database_search.rs  fulltext_indexes.rs  lib.rs  main.rs  monitoring.rs  rpc.rs  storage.rs
crates/rpc/tests/: fulltext_search_test.rs  integration_test.rs  nats_test.rs  proof_storage_tests.rs  search.rs  sequence.rs  sequence_debug.rs  sequence_test.rs  test_sequence_query.rs
crates/sdk/: Cargo.toml  README.md  build.rs
crates/sdk/src/: agent.rs  block.rs  client.rs  error.rs  kv.rs  lib.rs  state.rs  types.rs
crates/secrets-client/: Cargo.toml
crates/secrets-client/src/: lib.rs
crates/state/: Cargo.toml  build.rs
crates/state/src/: auth.rs  concurrency.rs  coordinator_auth.rs  database.rs  handlers.rs  lib.rs  main.rs  service.rs  storage.rs
crates/state/src/entity/: action_seq.rs  app_instance_coordinator_access.rs  blocks.rs  (+21 more)
crates/storage/: Cargo.toml
crates/storage/examples/: binary_example.rs
crates/storage/src/: archive.rs  constants.rs  lib.rs  proofs_cache.rs  s3.rs  walrus.rs
crates/storage/tests/: archive_test.rs  s3_binary_test.rs  walrus_test.rs
crates/sui/: Cargo.toml
crates/sui/src/: app_instance.rs  balance.rs  chain.rs  coin.rs  coin_management.rs  constants.rs  coordination.rs  error.rs  events.rs  faucet.rs  interface.rs  interface.rs.bak  jobs.rs  keypair.rs  lib.rs  network_info.rs  object_lock.rs  parse.rs  publish.rs  registry.rs  state.rs  transactions.rs  transactions.rs.bak  types.rs
crates/sui/tests/: README.md  app_instance_bcs_compare.rs  publish_integration_test.rs  publish_test.rs  registry_test.rs
crates/tidb/: Cargo.toml
crates/tidb/src/: lib.rs
crates/walrus/: Cargo.toml
crates/walrus/src/: lib.rs
crates/walrus/tests/: walrus_test.rs
examples/add-ethereum/agent/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  config.toml
examples/add-private/agent/: Cargo.toml  Dockerfile  config.toml
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
(+813 files in other folders)
