[workspace]
resolver = "2"
members = [
    "crates/rpc",
    "crates/coordinator",
    "crates/docker",
    "crates/tidb",
    "crates/monitoring",
    "crates/buffer",
    "crates/proto",
    "crates/nats",
    "crates/indexed-merkle-map",
    "crates/sui",
    "crates/kms",
    "crates/db",
    "crates/secrets-client",
    "crates/walrus",
    "xtask",
]
