[workspace]
resolver = "2"
members = [
    "crates/rpc",
    "crates/rpc-client",
    "crates/coordinator",
    "crates/docker",
    "crates/tidb",
    "crates/monitoring",
    "crates/buffer",
    "crates/proto",
    "crates/nats",
    "crates/indexed-merkle-map",
    "crates/sui",
    "crates/mina",
    "crates/ethereum",
    "crates/avs-operator",
    "crates/kms",
    "crates/db",
    "crates/secrets-client",
    "crates/storage",
    "xtask",
]

[workspace.package]
version = "0.1.9"
edition = "2024"
authors = ["DFST"]
license = "Apache-2.0"

[workspace.dependencies]
# Dependencies with consistent versions across all crates
dotenvy = "0.15"
tracing = "0.1"
prost = "0.13"
async-trait = "0.1"
tonic = "0.13"
chrono = "0.4"
futures = "0.3"
prost-types = "0.13"
hex = "0.4"
parking_lot = "0.12"
prost-reflect = { version = "0.15.3", features = ["derive"] }
once_cell = "1.21.3"
rand = "0.8"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tonic-reflection = "0.13"
sea-orm = { version = "1.1", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "with-chrono", "with-json", "with-uuid"] }
async-nats = "0.42"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bcs = "0.1"
aws-config = "1.8"
aws-sdk-s3 = "1.104.0"
sha2 = "0.10"
bs58 = "0.5"
clap = { version = "4", features = ["derive", "env"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Sui git dependencies
sui-rpc = { git = "https://github.com/MystenLabs/sui-rust-sdk.git" }
sui-sdk-types = { git = "https://github.com/MystenLabs/sui-rust-sdk.git" }
sui-crypto = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", features = ["ed25519"] }
sui-transaction-builder = { git = "https://github.com/MystenLabs/sui-rust-sdk.git" }

# Archive and compression dependencies
tar = "0.4"
zstd = "0.13"
ignore = "0.4"
walkdir = "2.4"

# Build dependencies
tonic-build = "0.13"
prost-reflect-build = "0.15.2"


