[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
duct = "1.0"             
anyhow.workspace = true
secrets-client = { path = "../crates/secrets-client" }
tokio.workspace = true
dotenv = "0.15"
