[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
duct = "1.0"             
anyhow.workspace = true
secrets-client = { path = "../crates/secrets-client" }
rpc-client = { path = "../crates/rpc-client" }
storage = { path = "../crates/storage" }
tokio.workspace = true
dotenvy.workspace = true
chrono.workspace = true
sha2.workspace = true
