[package]
name = "avs-operator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ethereum = { path = "../ethereum" }
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
once_cell.workspace = true
tracing.workspace = true
dotenvy.workspace = true
chrono.workspace = true
futures.workspace = true
async-trait.workspace = true
base64.workspace = true
rand.workspace = true
thiserror.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "avs-operator"
path = "src/main.rs"