[package]
name = "buffer"
version = "0.1.0"
edition = "2024"
authors = ["DFST"]
license = "Apache-2.0"

[dependencies]
# Core dependencies
anyhow = "1.0"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-stream = "0.1"
tracing = "0.1"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Serialization for NATS
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation for retry jitter
fastrand = "2.0"

# NATS (optional for publishing)
async-nats = "0.36"

# Environment variables
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"
