[package]
name = "buffer"
version = "0.1.0"
edition = "2024"
authors = ["DFST"]
license = "Apache-2.0"

[dependencies]
# Core dependencies
anyhow = "1.0"
tokio = { version = "1.46", features = ["macros", "rt-multi-thread", "time", "sync"] }
tracing = "0.1"

# Async utilities
async-trait = "0.1"


# Random number generation for retry jitter
fastrand = "2.3"

# NATS (optional for publishing)

# Environment variables

[dev-dependencies]
