[package]
name = "buffer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core dependencies
anyhow.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "sync"] }
tracing.workspace = true

# Async utilities
async-trait.workspace = true


# Random number generation for retry jitter
fastrand = "2.3"

# NATS (optional for publishing)

# Environment variables

[dev-dependencies]
