[package]
name = "silvana-coordination-private"
version = "0.1.0"
edition = "2021"
authors = ["Silvana Team"]
description = "Private coordination layer implementation using TiDB"

[dependencies]
silvana-coordination-trait = { path = "../coordination-trait" }
state = { path = "../state" }
async-trait = { workspace = true }
sea-orm = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = "9.0"
ed25519-dalek = "2.0"
hex = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"