[package]
name = "silvana-coordination-private"
version = "0.1.0"
edition = "2021"
authors = ["Silvana Team"]
description = "Private coordination layer implementation using TiDB"

[dependencies]
silvana-coordination-trait = { path = "../coordination-trait" }
proto = { path = "../proto" }
async-trait = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = "2.0"
hex = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-stream = "0.3"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"