[package]
name = "silvana-coordination-sui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Coordination trait
silvana-coordination-trait = { path = "../coordination-trait" }

# Sui utilities (for fetch, transactions, state management)
sui = { path = "../sui" }

# Async runtime
tokio.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
bcs.workspace = true

# Sui SDK
sui-rpc.workspace = true
sui-sdk-types.workspace = true

# Async utilities
async-trait.workspace = true
async-stream = "0.3"
tokio-stream = "0.1"
futures-util = "0.3"
