[package]
name = "health"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
default-run = "health"

[[bin]]
name = "health"
path = "src/main.rs"
required-features = ["binary"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2", "charset", "stream"] }
base64.workspace = true
hex.workspace = true
sysinfo = "0.35"
ed25519-dalek = "2.1"
jsonwebtoken = "9.3"
url = "2"
thiserror.workspace = true
once_cell.workspace = true
rand.workspace = true

# Optional: For binary only
dotenvy = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
clap = { workspace = true, optional = true }

[features]
default = ["binary"]
binary = ["dotenvy", "tracing-subscriber", "clap"]

