[package]
name = "indexed-merkle-map"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
crypto-bigint = "=0.5.5"
sha2.workspace = true
borsh = { version = "1.5", features = ["derive"] }

[features]
default = ["std"]
std = []
# Enable this feature when compiling for zkVM to hide non-provable code
zkvm = []

[dev-dependencies]
rand = "0.9.2"
