[package]
name = "kms"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
aws-config.workspace = true
aws-sdk-kms = "1.84"
aes-gcm = "0.10"
rand.workspace = true
serde.workspace = true
tracing.workspace = true
tokio.workspace = true