[package]
name = "monitoring"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum = { version = "0.8", features = ["http1", "json", "query"] }
chrono.workspace = true
prometheus = { version = "0.14", features = ["process"] }
sysinfo = "0.35"
tokio.workspace = true
tracing.workspace = true
buffer = { path = "../buffer" }


# Logging dependencies
tracing-subscriber.workspace = true
tracing-appender = "0.2"

# OpenTelemetry dependencies for BetterStack integration
opentelemetry = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio", "logs", "metrics"] }
opentelemetry-otlp = { version = "0.30", features = ["logs", "metrics", "grpc-tonic", "http-proto", "tls"] }
tonic = { workspace = true, features = ["tls-webpki-roots"] }
