[package]
name = "nats"
version = "0.1.0"
edition = "2024"
authors = ["DFST"]
license = "Apache-2.0"

[dependencies]
# Proto definitions

# Core async runtime
tokio = { version = "1.46", features = ["macros", "rt-multi-thread", "time"] }
async-trait = "0.1"

# NATS messaging
async-nats = "0.42"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"

# Buffer integration
buffer = { path = "../buffer" }

# Serialization for message publishing
proto = { path = "../proto" }
prost = "0.13"
prost-reflect ={ version = "0.15.3", features = ["derive"] }

# Random number generation for retry jitter

# Async utilities
futures = "0.3" 
