[package]
name = "nats"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Proto definitions

# Core async runtime
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
async-trait.workspace = true

# NATS messaging
async-nats.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true

# Buffer integration
buffer = { path = "../buffer" }

# Serialization for message publishing
proto = { path = "../proto" }
prost.workspace = true
prost-reflect.workspace = true

# Random number generation for retry jitter

# Async utilities
futures.workspace = true 
