[package]
name = "proto"
version = "0.1.0"
edition = "2024"
authors = ["DFST"]
license = "Apache-2.0"

[dependencies]
tonic = { version = "0.10", features = ["tls", "tls-webpki-roots"] }
prost = "0.12"
prost-types = "0.12"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.10"
prost-build = "0.12"
