[package]
name = "proto"
version = "0.1.0"
edition = "2024"
authors = ["DFST"]
license = "Apache-2.0"

[dependencies]
tonic = { version = "0.13", features = ["tls-webpki-roots"] }
tonic-reflection = "0.13"
prost = "0.13"
prost-types = "0.13"
prost-reflect ={ version = "0.15.3", features = ["derive"] }
prost-reflect-build = "0.15.2"
once_cell = "1.21.3"

[build-dependencies]
tonic-reflection = "0.13"
tonic-build = "0.13"
prost-build = "0.13"
prost-reflect ={ version = "0.15.3", features = ["derive"] }
prost-reflect-build = "0.15.2"
once_cell = "1.21.3"
