[package]
name = "rpc"
version = "0.1.0"
edition = "2024"
authors = ["DFST"]
license = "Apache-2.0"
default-run = "rpc"

[dependencies]
# Proto definitions
proto = { path = "../proto" }
prost-reflect ={ version = "0.15.3", features = ["derive"] }
# Database entities
tidb = { path = "../tidb" }
# Event buffering
buffer = { path = "../buffer" }
# Monitoring system
monitoring = { path = "../monitoring" }
# NATS messaging (optional backend)
nats = { path = "../nats" }

tonic = { version = "0.13", features = [ "tls-webpki-roots"] }
tonic-web = "0.13"
tonic-reflection = "0.13"
prost = "0.13"
tokio = { version = "1.46", features = ["macros", "rt-multi-thread", "time"] }
tower-http = { version = "0.6", features = ["cors"] }


# OpenTelemetry

# Sea-ORM and Database
sea-orm = { version = "1.1", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "with-chrono", "with-json", "with-uuid"] }

# Time and UUID
chrono = { version = "0.4"}


# Environment and Config
dotenvy = "0.15"
anyhow = "1.0"
tracing = "0.1"

# NATS (placeholder for future implementation)
async-nats = "0.42"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Random number generation for retry jitter

[dev-dependencies]
# For integration tests


