[package]
name = "rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
default-run = "rpc"

[dependencies]
# Proto definitions
proto = { path = "../proto" }
prost-reflect.workspace = true
# Database entities
tidb = { path = "../tidb" }
# Event buffering
buffer = { path = "../buffer" }
# Monitoring system
monitoring = { path = "../monitoring" }
# NATS messaging (optional backend)
nats = { path = "../nats" }
# Database and KMS for secrets storage
db = { path = "../db" }
kms = { path = "../kms" }
# Storage for proofs cache
storage = { path = "../storage" }

tonic = { workspace = true, features = [ "tls-webpki-roots"] }
tonic-web = "0.13"
tonic-reflection.workspace = true
prost.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tower-http = { version = "0.6", features = ["cors"] }


# OpenTelemetry

# Sea-ORM and Database
sea-orm.workspace = true

# Time and UUID
chrono.workspace = true


# Environment and Config
dotenvy.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde_json.workspace = true

# NATS (placeholder for future implementation)
async-nats.workspace = true

# Async utilities
futures.workspace = true
lazy_static = "1.5"
async-trait.workspace = true

# Random number generation for retry jitter

# TLS support for rustls crypto provider
rustls.workspace = true

[dev-dependencies]
# For integration tests


