[package]
name = "silvana-sdk"
version = "0.1.0"
edition = "2021"
authors = ["DFST"]
license = "Apache-2.0"
description = "Silvana Agent SDK for gRPC coordinator communication"
repository = "https://github.com/SilvanaOne/silvana"
documentation = "https://docs.silvana.one"
keywords = ["silvana", "agent", "sdk", "grpc", "coordinator"]

[dependencies]
# gRPC and protobuf
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Async runtime
tokio = { version = "1.40", features = ["full", "macros", "rt-multi-thread"] }
futures = { workspace = true }

# Concurrency
once_cell = "1.20"
parking_lot = { workspace = true }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = { workspace = true }
log = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
hex = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
prost-build = { workspace = true }

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockito = "1.6"