[package]
name = "storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
sha2.workspace = true
hex.workspace = true
once_cell.workspace = true
base64.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio-test = "0.4"
dotenvy.workspace = true
tracing-subscriber.workspace = true