[package]
name = "tidb"
version = "0.1.0"
edition = "2024"
authors = ["DFST"]
license = "Apache-2.0"

[dependencies]
# Buffer integration
buffer = { path = "../buffer" }

# Async traits and error handling
async-trait = "0.1"
anyhow = "1.0"

# Sea-ORM and Database
sea-orm = { version = "1.1", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "with-chrono", "with-json", "with-uuid"] }

# Time and UUID for entity fields


