[package]
name = "tidb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Buffer integration
buffer = { path = "../buffer" }

# Async traits and error handling
async-trait.workspace = true
anyhow.workspace = true

# Sea-ORM and Database
sea-orm.workspace = true

# Time and UUID for entity fields


