[package]
name = "walrus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", features = ["json"] }
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-test = "0.4"
chrono = { workspace = true, features = ["serde"] }
serde_json.workspace = true